--- a/css/style.css
+++ b/css/style.css
@@ -1,29 +1,36 @@
+/*Colours
+Background: #F4F4F2
+Buttons/Jewellery Active: #1253A4
+Button inactive: #FFD464;
+Links: #F26964;
+Text: #30302F*/
+
+body {
+    background-color: #F2F2F3;
+    color: #545454;
+}
+
 .timerContainer {
 	width: 300px;
 	margin-top: 20px;
 	margin-bottom: 1px;
-  color: #545454;
 }
 
-section {
-    width: 99%;
-    height: 40px;
-    margin: auto;
-    padding: 2px;
+.contentSection {
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
 .timer {
 	margin-left: 15%;
-  height: 40px;
-
-  color: #545454;
+  height: 30px;
 }
 
 .otp {
 	width: 70%;
   height: 40px;
   float: left;
-  padding-left: 15px;
+  padding-left: 0px;
 }
 
 .inputForms .form-group {
@@ -32,6 +39,10 @@ section {
 
 .row {
 	padding-top: 10px;
+}
+
+#timeIcon {
+  padding-top: 2px;
 }
 
 .qrCode {
@@ -46,4 +57,38 @@ section {
 #footer {
   width: 300px;
   padding-left: 10px;
+}
+
+.titleLabel {
+  padding-bottom: 5px;
+  padding-top: 5px;
+}
+
+/* unvisited link */
+a:link {
+    color: #6E6E6E;
+}
+
+/* visited link */
+a:visited {
+    color: #6E6E6E;
+}
+
+/* mouse over link */
+a:hover {
+    color: #6E6E6E;
+}
+
+/* selected link */
+a:active {
+    color: #6E6E6E;
+}
+
+#icon {
+  height: 75px;
+  width: 75px;
+}
+
+#header {
+  text-align: center;
 }
