--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,12 @@ body {
   padding-top: 5px;
 }
 
+#OTPLength {
+  float: left;
+  padding-right: 20px;
+}
+
+
 /* unvisited link */
 a:link {
     color: #6E6E6E;
